to restore JAVA8 compatibility replaced fabric method (List.of) with (Arrays.asList)